Fixed deprecated Double code